--- a/04 Abstrakt.tex
+++ b/04 Abstrakt.tex
@@ -1,5 +1,12 @@
 \thispagestyle{empty}
 \section*{Abstrakt}
+DRUSKA, Róbert: Riadkovo-stĺpcové návrhy štatistických experimentov [Bakalárska práca],
+Univerzita Komenského v Bratislave,
+Fakulta matematiky, fyziky a informatiky,
+Katedra aplikovanej matematiky a štatistiky,
+školiteľ: doc. Mgr. Radoslav Harman, PhD.,
+Bratislava, 2020, 38 s.
+
 TODO
 
 \begin{flushleft}
