--- a/05 Abstract.tex
+++ b/05 Abstract.tex
@@ -1,5 +1,12 @@
 \thispagestyle{empty}
 \section*{Abstract}
+DRUSKA, Róbert: Row-column designs of statistical experiments [Bachelor thesis],
+Comenius University in Bratislava,
+Faculty of Mathematics, Physics and Informatics,
+Department of Applied Mathematics and Statistics,
+supervisor: doc. Mgr. Radoslav Harman, PhD.,
+Bratislava, 2020, 38 p.
+
 TODO
 
 \begin{flushleft}
