--- a/03 Podakovanie.tex
+++ b/03 Podakovanie.tex
@@ -4,4 +4,6 @@
 \vfill
 \thispagestyle{empty}
 \paragraph{Poďakovanie}
-TODO
+
+Touto cestou by som sa chcel poďakovať svojmu školiteľovi, Radoslavovi Harmanovi, za jeho ochotu a množstvo dobrých a pravidelných rád pri písaní tejto práce.
+Ďakujem tiež svojej mame za gramatickú a štylistickú korektúru, a zvyšnej rodine a priateľom za oporu v posledných mesiacoch, strávených doma v dôsledku globálnej zdravotnej krízy.
