abstract in slovak

--- a/04 Abstrakt.tex
+++ b/04 Abstrakt.tex
@@ -7,8 +7,11 @@ Katedra aplikovanej matematiky a štatistiky,
 školiteľ: doc. Mgr. Radoslav Harman, PhD.,
 Bratislava, 2020, 38 s.
 
-TODO
+V práci analyzujeme konkrétnu triedu štatistických experimentov, v ktorých pre všetky kombinácie dvoch kvalitatívnych faktorov zvolíme jedno z dvoch možných ošetrení. 
+Tento experiment vieme modelovať ako lineárny regresný model, pričom kľúčová pre nás bude Gaussova-Markovova veta, ktorej dôsledky budeme využívať v praktickej časti práce. 
+Cieľom je analyzovať kontrast dvoch typov ošetrení a nájsť tie návrhy experimentu, ktoré umožňujú čo najlepší odhad efektu medzi nimi.
+Návrhy experimentu budeme reprezentovať binárnymi maticami.
 
 \begin{flushleft}
-  \textbf{Kľúčové slová:} lineárny regresný model
+  \textbf{Kľúčové slová:} štatistický experiment, lineárny regresný model, návrh experimentu, binárna matica
 \end{flushleft}
