introduction, methodology chapter update, lit update, copy-pasta enabled

--- a/06 Uvod.tex
+++ b/06 Uvod.tex
@@ -1,1 +1,16 @@
-TODO
+Vykonávanie experimentov a prieskumov patrí medzi populárne mechanizmy, ako potvrdiť či vyvrátiť naše domnienky, alebo odhaliť nové, neočakávané skutočnosti. 
+V súčasnosti, vďaka nebývalému rozvoju v oblasti výpočtovej techniky a spracovania dát, je tento trend silnejší, než kedykoľvek v minulosti.
+
+Predtým, než sa experimentátor bezhlavo pustí do zberu dát a ich analýzy, je potrebné experiment navrhnúť tak, aby jeho výsledky dávali dostatočný priestor na 
+logickú a nespochybniteľnú analýzu. V ideálnom prípade chceme, aby miera informácie, ktorú zozbierané dáta ponúkajú, bola čo najväčšia.
+
+V našej práci sa budeme zaoberať návrhom tzv. riadkovo-stĺpcových experimentov, v ktorých kombinácie dvoch kvalitatívnych faktorov spájame s jedným z dvoch typov ošetrení. 
+Tieto návrhy budeme reprezentovať binárnymi maticami, ktoré, ako ukážeme, vieme transformovať na lineárny regresný model. 
+Teóriou lineárnej regresie sa zaoberá množstvo článkov a publikácií, v našej práci budeme čerpať najmä z \cite{pazman, yan}.
+
+Spolu s teóriou lineárnej regresie uvedieme v teoretickej časti niektoré dôležité poznatky z lineárnej algebry, ktoré budeme využívať v celej práci. 
+V tretej kapitole v krátkosti opíšeme, ako sme pri našom výskume postupovali.
+
+V štvrtej kapitole budeme skúmať riadkovo-stĺpcové návrhy. Cieľom je analyzovať kontrast medzi dvoma typmi ošetrení. 
+Uvedieme, ktorá trieda návrhov ponúka dostatočnú informáciu na odhadnutie tohto kontrastu, a tiež pre ktoré z nich je tento odhad najpresnejší. 
+Na záver v krátkosti ukážeme, ako možno riadkovo-stĺpcové návrhy reprezentovať bipartitným grafom.
