--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -2,6 +2,9 @@
 
 %PACKAGES
 
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
+
 \usepackage[utf8]{inputenc}
 \usepackage[slovak]{babel}
 \usepackage{comment}
@@ -18,6 +21,10 @@
 \usepackage{xcolor}
 \usepackage{listings}
 \usepackage{enumitem}
+
+\usepackage{url}
+\urlstyle{rm}
+\renewcommand\UrlFont{\color{black}}
 
 \usepackage{tikz}
 \usetikzlibrary{positioning,chains,fit,shapes,calc}
