--- a/13 Literatura.tex
+++ b/13 Literatura.tex
@@ -1,6 +1,12 @@
 \begin{thebibliography}{99}
 
-	\bibitem{kniha} Pázman, A., Lacko, V.: {\it Prednášky z regresných modelov}, Vydavateľstvo UK, Bratislava, 2012, 2015
+	\bibitem{pazman} Pázman, A., Lacko, V.: {\it Prednášky z regresných modelov}, Vydavateľstvo UK, Bratislava, 2012, 2015
+
+	\bibitem{kniha} Freedman, David: {\it Statistical models: Theory and practice}, Cambridge University Press, New York, 2005
+
+	\bibitem{kniha} Rencher, Alvin C.: {\it Methods of Multivariate Analysis}, John Wiley \& Sons, New York, 2002
+
+	\bibitem{yan} Yan, Xin: {\it Linear Regression Analysis: Theory and Computing}, World Scientific Publishing Co. Pte. Ltd., Singapore, 2009
 
 	\bibitem{kniha} http://oeis.org/A002724
 
