--- a/14 AppendixA.tex
+++ b/14 AppendixA.tex
@@ -1,124 +1,119 @@
-\renewcommand{\thesection}{A.\arabic{section}}
-\renewcommand{\theequation}{A.\arabic{equation}}
-\renewcommand{\thefigure}{A.\arabic{figure}}
-\setcounter{equation}{0}
-
-\textbf{Niektoré optimálne návrhy}
+\textbf{Návrhy rozmeru $3 \times 3$, pre ktoré nie je možné odhadnúť hodnotu $h^T b$}
 
 \begin{center}
 $
 \begin{bmatrix}
-0 & 0 & 0 & 0 & 1 & 1 & 1 \\
-0 & 0 & 0 & 1 & 0 & 1 & 1 \\
-1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+0 & 0 & 0 \\ 
+0 & 0 & 0 \\ 
+0 & 0 & 0 \\ 
 \end{bmatrix}
 ,
 \begin{bmatrix}
-0 & 0 & 1 & 1 \\
-0 & 0 & 1 & 1 \\
-1 & 1 & 0 & 0 \\
-1 & 1 & 0 & 0 \\
+0 & 0 & 0 \\
+1 & 1 & 1 \\
+0 & 0 & 0 \\
 \end{bmatrix}
 ,
 \begin{bmatrix}
-0 & 0 & 0 & 1 & 1 \\ 
-0 & 0 & 0 & 1 & 1 \\ 
-1 & 1 & 1 & 0 & 0 \\ 
-1 & 1 & 1 & 0 & 0 \\ 
+1 & 1 & 1 \\
+0 & 0 & 0 \\
+0 & 0 & 0 \\
 \end{bmatrix}
 ,
 \begin{bmatrix}
-0 & 0 & 0 & 1 & 1 \\
-0 & 0 & 0 & 1 & 1 \\
-0 & 1 & 1 & 0 & 0 \\
-1 & 0 & 1 & 0 & 0 \\
-1 & 1 & 0 & 0 & 0 \\
+1 & 1 & 1 \\
+1 & 1 & 1 \\
+0 & 0 & 0 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+0 & 0 & 0 \\
+0 & 0 & 0 \\
+0 & 0 & 0 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+0 & 0 & 0 \\
+0 & 0 & 0 \\
+1 & 1 & 1 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+0 & 0 & 0 \\
+1 & 1 & 1 \\
+0 & 0 & 0 \\
 \end{bmatrix}
 $
 \end{center}
 \begin{center}
 $
 \begin{bmatrix}
-0 & 0 & 1 & 1 \\ 
-0 & 0 & 1 & 1 \\ 
-0 & 0 & 1 & 1 \\ 
-1 & 1 & 0 & 0 \\ 
-1 & 1 & 0 & 0 \\ 
-1 & 1 & 0 & 0 \\ 
+0 & 0 & 0 \\
+1 & 1 & 1 \\
+1 & 1 & 1 \\
 \end{bmatrix}
 ,
 \begin{bmatrix}
-0 & 0 & 0 & 1 & 1 \\ 
-0 & 0 & 0 & 1 & 1 \\ 
-0 & 0 & 0 & 1 & 1 \\ 
-1 & 1 & 1 & 0 & 0 \\ 
-1 & 1 & 1 & 0 & 0 \\ 
-1 & 1 & 1 & 0 & 0 \\ 
+0 & 0 & 1 \\
+0 & 0 & 1 \\
+0 & 0 & 1 \\
 \end{bmatrix}
 ,
 \begin{bmatrix}
-0 & 0 & 0 & 1 & 1 & 1 \\ 
-0 & 0 & 0 & 1 & 1 & 1 \\ 
-0 & 0 & 0 & 1 & 1 & 1 \\ 
-1 & 1 & 1 & 0 & 0 & 0 \\ 
-1 & 1 & 1 & 0 & 0 & 0 \\ 
-1 & 1 & 1 & 0 & 0 & 0 \\ 
+0 & 1 & 0 \\
+0 & 1 & 0 \\
+0 & 1 & 0 \\
 \end{bmatrix}
 ,
 \begin{bmatrix}
-1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
-0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+0 & 1 & 1 \\
+0 & 1 & 1 \\
+0 & 1 & 1 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+1 & 0 & 0 \\
+1 & 0 & 0 \\
+1 & 0 & 0 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+1 & 0 & 1 \\
+1 & 0 & 1 \\
+1 & 0 & 1 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+1 & 1 & 0 \\
+1 & 1 & 0 \\
+1 & 1 & 0 \\
 \end{bmatrix}
 $
 \end{center}
-
 \begin{center}
 $
 \begin{bmatrix}
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+1 & 1 & 1 \\
+0 & 0 & 0 \\
+0 & 0 & 0 \\
 \end{bmatrix}
-$
-\end{center}
-
-\begin{center}
-$
+,
 \begin{bmatrix}
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 1 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 1 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 0 & 1 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 1 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 1 \\
-0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 \\
+1 & 1 & 1 \\
+0 & 0 & 0 \\
+1 & 1 & 1 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+1 & 1 & 1 \\
+1 & 1 & 1 \\
+0 & 0 & 0 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+1 & 1 & 1 \\
+1 & 1 & 1 \\
+1 & 1 & 1 \\
 \end{bmatrix}
 $
 \end{center}
