--- a/15 AppendixB.tex
+++ b/15 AppendixB.tex
@@ -1,36 +1,124 @@
-\textbf{Vypočítanie variance pre dizajn}
+\renewcommand{\thesection}{A.\arabic{section}}
+\renewcommand{\theequation}{A.\arabic{equation}}
+\renewcommand{\thefigure}{A.\arabic{figure}}
+\setcounter{equation}{0}
 
-\begin{lstlisting}[language=Python, basicstyle=\footnotesize]
-import numpy as np
-import math
+\textbf{Niektoré optimálne návrhy}
 
-def compute_transformation_matrix(matrix):
-    m, n = matrix.shape
-    transformation_matrix = np.zeros(shape=(m*n, m + n + 2), dtype=np.int8)
-    for i, row in enumerate(matrix):
-        for j, value in enumerate(row):
-            transformation_matrix[n*i + j, i] = 1
-            transformation_matrix[n*i + j, m + j] = 1
-            transformation_matrix[n*i + j, m + n + value] = 1
-    return transformation_matrix
+\begin{center}
+$
+\begin{bmatrix}
+0 & 0 & 0 & 0 & 1 & 1 & 1 \\
+0 & 0 & 0 & 1 & 0 & 1 & 1 \\
+1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+0 & 0 & 1 & 1 \\
+0 & 0 & 1 & 1 \\
+1 & 1 & 0 & 0 \\
+1 & 1 & 0 & 0 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+0 & 0 & 0 & 1 & 1 \\ 
+0 & 0 & 0 & 1 & 1 \\ 
+1 & 1 & 1 & 0 & 0 \\ 
+1 & 1 & 1 & 0 & 0 \\ 
+\end{bmatrix}
+,
+\begin{bmatrix}
+0 & 0 & 0 & 1 & 1 \\
+0 & 0 & 0 & 1 & 1 \\
+0 & 1 & 1 & 0 & 0 \\
+1 & 0 & 1 & 0 & 0 \\
+1 & 1 & 0 & 0 & 0 \\
+\end{bmatrix}
+$
+\end{center}
+\begin{center}
+$
+\begin{bmatrix}
+0 & 0 & 1 & 1 \\ 
+0 & 0 & 1 & 1 \\ 
+0 & 0 & 1 & 1 \\ 
+1 & 1 & 0 & 0 \\ 
+1 & 1 & 0 & 0 \\ 
+1 & 1 & 0 & 0 \\ 
+\end{bmatrix}
+,
+\begin{bmatrix}
+0 & 0 & 0 & 1 & 1 \\ 
+0 & 0 & 0 & 1 & 1 \\ 
+0 & 0 & 0 & 1 & 1 \\ 
+1 & 1 & 1 & 0 & 0 \\ 
+1 & 1 & 1 & 0 & 0 \\ 
+1 & 1 & 1 & 0 & 0 \\ 
+\end{bmatrix}
+,
+\begin{bmatrix}
+0 & 0 & 0 & 1 & 1 & 1 \\ 
+0 & 0 & 0 & 1 & 1 & 1 \\ 
+0 & 0 & 0 & 1 & 1 & 1 \\ 
+1 & 1 & 1 & 0 & 0 & 0 \\ 
+1 & 1 & 1 & 0 & 0 & 0 \\ 
+1 & 1 & 1 & 0 & 0 & 0 \\ 
+\end{bmatrix}
+,
+\begin{bmatrix}
+1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+\end{bmatrix}
+$
+\end{center}
 
-def compute_variance(matrix):
-    m, n = matrix.shape
-    transformation_matrix = compute_transformation_matrix(matrix)
-    m_matrix = np.matmul(transformation_matrix.transpose(), transformation_matrix)
-    m_matrix_inverse = np.linalg.pinv(m_matrix)
-    try:
-        h = np.zeros(shape=(1, m + n + 2))
-        h[0, m + n] = 1
-        h[0, m + n + 1] = -1
-        wannabe_h = np.matmul(np.matmul(m_matrix, m_matrix_inverse), h.transpose())
-        for i, value in enumerate(wannabe_h):
-            wannabe_h[i] = [round(value[0], 3)]
-        if np.array_equal(wannabe_h, h.transpose()):
-            variance = np.matmul(np.matmul(h, m_matrix_inverse), h.transpose())
-            return variance[0, 0]
-        else:
-            return math.inf
-    except Exception as e:
-        return math.inf
-\end{lstlisting}
+\begin{center}
+$
+\begin{bmatrix}
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+\end{bmatrix}
+$
+\end{center}
+
+\begin{center}
+$
+\begin{bmatrix}
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 1 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 0 & 1 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 1 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 \\
+\end{bmatrix}
+$
+\end{center}
