--- a/04 Abstrakt.tex
+++ b/04 Abstrakt.tex
@@ -9,7 +9,7 @@ Bratislava, 2020, 38 s.
 
 V práci analyzujeme konkrétnu triedu štatistických experimentov, v ktorých pre všetky kombinácie dvoch kvalitatívnych faktorov zvolíme jedno z dvoch možných ošetrení. 
 Tento experiment vieme modelovať ako lineárny regresný model, pričom kľúčová pre nás bude Gaussova-Markovova veta, ktorej dôsledky budeme využívať v praktickej časti práce. 
-Cieľom je analyzovať kontrast dvoch typov ošetrení a nájsť tie návrhy experimentu, ktoré umožňujú čo najlepší odhad efektu medzi nimi.
+Cieľom je analyzovať kontrast dvoch typov ošetrení a nájsť tie návrhy experimentu, ktoré umožňujú čo najlepší odhad tohto kontrastu.
 Návrhy experimentu budeme reprezentovať binárnymi maticami.
 
 \begin{flushleft}
