--- a/13 Literatura.tex
+++ b/13 Literatura.tex
@@ -8,6 +8,6 @@
 
 	\bibitem{yan} Yan, Xin: {\it Linear Regression Analysis: Theory and Computing}, World Scientific Publishing Co. Pte. Ltd., Singapore, 2009
 
-	\bibitem{kniha} http://oeis.org/A002724
+	\bibitem{kniha} \url{http://oeis.org/A002724}
 
 \end{thebibliography}
