--- a/12 Zaver.tex
+++ b/12 Zaver.tex
@@ -1,1 +1,15 @@
-TODO
+V práci sme skúmali tzv. riadkovo-stĺpcové návrhy štatistických experimentov. 
+Vzali sme na seba rolu experimentátora a jedným z našich cieľov bolo nájsť tú triedu experimentu, ktorá nám ponúkne čo najvhodnejšie výsledky.
+
+V praktickej časti sme najprv identifikovali tie návrhy, v ktorých je možné odhadnúť žiadanú veličinu - kontrast medzi dvoma možnými ošetreniami. 
+Následne sme určili, v ktorých návrhoch vieme tento kontrast odhadnúť čo najpresnejšie, a vytvorili sme jednoduchý algoritmus, ako tieto návrhy zostrojiť pre ľubovoľný rozmer. 
+Algoritmus napísaný v jazyku python sa nachádza v prílohe \hyperref[appendix:d]{D}.
+
+Hoci sme ponúkli niekoľko zaujímavých záverov, priestor na bádanie sme zďaleka nevyčerpali. 
+Pripomíname, že sme sa obmedzili na veľmi konkrétnu triedu experimentov. Mechanizmy, ktoré sme pri výskume použili, však majú potenciál byť využité aj pri iných druhoch experimentov.
+
+Mohli by sme napríklad pracovať nie s dvoma typmi ošetrení, ako tomu bolo v našej práci, ale s troma a viac. 
+Ďalším z možných rozšírení by bolo “zakázanie” niektorých kombinácií dvoch faktorov a jeho vplyv na optimálny návrh experimentu.
+
+Jedná sa o problematiku, ktorej nebolo venované toľko článkov a publikácií, ako iným, populárnejším témam. 
+Nech aj to je pre nás motiváciou k ďalšiemu bádaniu.
