--- a/12 Zaver.tex
+++ b/12 Zaver.tex
@@ -3,7 +3,7 @@ Vzali sme na seba rolu experimentátora a jedným z našich cieľov bolo nájsť
 
 V praktickej časti sme najprv identifikovali tie návrhy, v ktorých je možné odhadnúť žiadanú veličinu - kontrast medzi dvoma možnými ošetreniami. 
 Následne sme určili, v ktorých návrhoch vieme tento kontrast odhadnúť čo najpresnejšie, a vytvorili sme jednoduchý algoritmus, ako tieto návrhy zostrojiť pre ľubovoľný rozmer. 
-Algoritmus napísaný v jazyku python sa nachádza v prílohe \hyperref[appendix:d]{D}.
+Algoritmus napísaný v jazyku \emph{python} sa nachádza v prílohe \hyperref[appendix:d]{D}.
 
 Hoci sme ponúkli niekoľko zaujímavých záverov, priestor na bádanie sme zďaleka nevyčerpali. 
 Pripomíname, že sme sa obmedzili na veľmi konkrétnu triedu experimentov. Mechanizmy, ktoré sme pri výskume použili, však majú potenciál byť využité aj pri iných druhoch experimentov.
