--- a/Bakalarka.tex
+++ b/Bakalarka.tex
@@ -28,6 +28,8 @@
 \urlstyle{rm}
 \renewcommand\UrlFont{\color{black}}
 
+\usepackage{pgfplots}
+
 \usepackage{tikz}
 \usetikzlibrary{positioning,chains,fit,shapes,calc}
 
