abstract in english

--- a/04 Abstrakt.tex
+++ b/04 Abstrakt.tex
@@ -13,5 +13,5 @@ Cieľom je analyzovať kontrast dvoch typov ošetrení a nájsť tie návrhy exp
 Návrhy experimentu budeme reprezentovať binárnymi maticami.
 
 \begin{flushleft}
-  \textbf{Kľúčové slová:} štatistický experiment, lineárny regresný model, návrh experimentu, binárna matica
+  \textbf{Kľúčové slová:} štatistický experiment, lineárny regresný model, návrh experimentu, Gaussova-Markovova veta, binárna matica
 \end{flushleft}
