--- a/05 Abstract.tex
+++ b/05 Abstract.tex
@@ -7,8 +7,11 @@ Department of Applied Mathematics and Statistics,
 supervisor: doc. Mgr. Radoslav Harman, PhD.,
 Bratislava, 2020, 38 p.
 
-TODO
+In our thesis we analyse a particular class of statistical experiments, where for all combinations of two qualitative factors we select one of two possible treatments. 
+This experiment can be modelled as a linear regression. The key theoretical theorem, which we use in the practical section of our thesis, is the Gauss-Markov theorem. 
+The goal is to analyse the contrast between the two types of treatment and to find those designs of experiment that allow the best possible estimate of this contrast. 
+Designs of experiment are represented by binary matrices.
 
 \begin{flushleft}
-  \textbf{Keywords:} linear regression
+  \textbf{Keywords:} statistical experiment, linear regression, design of experiment, Gauss-Markov theorem, binary matrix
 \end{flushleft}
