--- a/08 kap2.tex
+++ b/08 kap2.tex
@@ -7,12 +7,12 @@ vrátane medicíny, biológie, ekonómie, sociológie atď. Ciele regresnej anal
 \begin{enumerate}
   \item nájsť vzťah medzi závislou premennou $y$ a regresormi $x_1, \ldots, x_n$,
   \item odhadnúť $y$ na základe hodnôt $x_1, \ldots, x_n$,
-  \item preskúmať premenné $x_1, \ldots, x_n$ a identifikovať, ktoré z nich lepšie popisujú premennú $y$, resp. určiť, ktoré z nich majú na $y$ aký vplyv
+  \item preskúmať premenné $x_1, \ldots, x_n$ a identifikovať, ktoré z nich lepšie popisujú premennú $y$, resp. určiť, ktoré z nich majú na $y$ aký vplyv.
 \end{enumerate}
 
 V našej práci sa budeme zaoberať treťou z pomenovaných oblastí.
 
-Uvažujme teda lineáry regresný model
+Uvažujme teda lineárny regresný model
 
 \begin{align}
 \label{linear regression formula}
@@ -49,7 +49,7 @@ $i = 1, 2, \ldots, N$,
 pre $y = (y_1, y_2, \ldots, y_N)^T$, $b = (b_1, b_2, \ldots, b_p)^T$ a $\varepsilon = ({\varepsilon}_1, {\varepsilon}_2, \ldots, {\varepsilon}_N)^T$.
 
 Ďalej budeme predpokladať $E(\varepsilon) = \textbf{0}$, $Var[\varepsilon] = {\sigma}^2 I$,
-t. j jednotlivé ${\varepsilon}_i, {\varepsilon}_j$ sú nezávislé a rovnako rozdelené.
+t. j. jednotlivé ${\varepsilon}_i, {\varepsilon}_j$ sú nezávislé a rovnako rozdelené.
 Pre jednoduchosť takisto predpokladajme, že ${\sigma}^2 = 1$.
 
 V praxi je $b$ neznámy vektor, ktorý sa snažíme odhadnúť na základe nameraných hodnôt $y$.
@@ -143,7 +143,7 @@ Ak $h$ patrí do riadkového priestoru matice $X$, potom existuje také $u$, že
 Potom pre jednoznačný odhad $h^T \hat{b}$ vektora $h^T b$ platí:
 
 \begin{center}
-$h^T \hat{b} = u^T X \hat{b} = u^T P y = u^T X(X^T X)^- X^T y$,
+$h^T \hat{b} = u^T X \hat{b} = u^T P y = u^T X(X^T X)^- X^T y$.
 \end{center}
 
 Vidíme, že v strede výrazu na pravej strane je projekčná matica $X(X^T X)^- X^T$, ktorá je vždy jednoznačne určená, 
