--- a/09 kap3.tex
+++ b/09 kap3.tex
@@ -9,5 +9,5 @@ Od „preskúmania situácie“ do istého rozmeru si sľubujeme dôležité ná
 ktoré nám umožnia vysloviť závery a hypotézy pre všeobecný prípad $m \times n$. 
 Tie sa následne pokúsime dokázať matematickými metódami.
 
-Kompletný kód, ktorý sme pri našom výškume použili, sa nachádza v \emph{Github} repozitári na stránke
+Kompletný kód, ktorý sme pri našom výskume použili, sa nachádza v \emph{Github} repozitári na stránke
 \url{https://github.com/druskacik/optimal-designs-bachelor-thesis-}.
