--- a/06 Uvod.tex
+++ b/06 Uvod.tex
@@ -1,7 +1,7 @@
 Vykonávanie experimentov a prieskumov patrí medzi populárne mechanizmy, ako potvrdiť či vyvrátiť naše domnienky, alebo odhaliť nové, neočakávané skutočnosti. 
 V súčasnosti, vďaka nebývalému rozvoju v oblasti výpočtovej techniky a spracovania dát, je tento trend silnejší, než kedykoľvek v minulosti.
 
-Predtým, než sa experimentátor bezhlavo pustí do zberu dát a ich analýzy, je potrebné experiment navrhnúť tak, aby jeho výsledky dávali dostatočný priestor na 
+Predtým, než sa experimentátor pustí do zberu dát a ich analýzy, je potrebné experiment navrhnúť tak, aby jeho výsledky dávali dostatočný priestor na 
 logickú a nespochybniteľnú analýzu. V ideálnom prípade chceme, aby miera informácie, ktorú zozbierané dáta ponúkajú, bola čo najväčšia.
 
 V našej práci sa budeme zaoberať návrhom tzv. riadkovo-stĺpcových experimentov, v ktorých kombinácie dvoch kvalitatívnych faktorov spájame s jedným z dvoch typov ošetrení. 
