--- a/10 kap4.tex
+++ b/10 kap4.tex
@@ -272,7 +272,7 @@ Pre rozmer $m \times n$ existuje $2^{mn}$ binárnych matíc, čo je obrovské č
 (Napríklad už pre rozmer $5 \times 5$ máme viac než milión matíc.)
 Pre skúmanie špecifík jednotlivých matíc je výhodné uvedomiť si niektoré očividné ekvivalencie medzi maticami, 
 čo nám môže výrazne zredukovať počet matíc, s ktorými pracujeme,
- a v konečnom dôsledku nám to umožní pracovať spôsobom “brute force” do väčšieho rozmeru.
+ a v konečnom dôsledku nám to umožní pracovať spôsobom “hrubej sily” do väčšieho rozmeru.
 
 \begin{hypoteza}
 
