--- a/12 Zaver.tex
+++ b/12 Zaver.tex
@@ -1,5 +1,5 @@
 V práci sme skúmali tzv. riadkovo-stĺpcové návrhy štatistických experimentov. 
-Vzali sme na seba rolu experimentátora a jedným z našich cieľov bolo nájsť tú triedu experimentu, ktorá nám ponúkne čo najvhodnejšie výsledky.
+Vzali sme na seba rolu experimentátora a jedným z našich cieľov bolo nájsť ten návrh experimentu, ktorý nám ponúkne čo najvhodnejšie výsledky.
 
 V praktickej časti sme najprv identifikovali tie návrhy, v ktorých je možné odhadnúť žiadanú veličinu - kontrast medzi dvoma možnými ošetreniami. 
 Následne sme určili, v ktorých návrhoch vieme tento kontrast odhadnúť čo najpresnejšie, a vytvorili sme jednoduchý algoritmus, ako tieto návrhy zostrojiť pre ľubovoľný rozmer. 
@@ -10,6 +10,11 @@ Pripomíname, že sme sa obmedzili na veľmi konkrétnu triedu experimentov. Mec
 
 Mohli by sme napríklad pracovať nie s dvoma typmi ošetrení, ako tomu bolo v našej práci, ale s troma a viac. 
 Ďalším z možných rozšírení by bolo “zakázanie” niektorých kombinácií dvoch faktorov a jeho vplyv na optimálny návrh experimentu.
+
+Tiež sme naplno nevyužili potenciál teórie grafov, ktorá sa v tematike optimálneho návrhu experimentov využíva často. 
+Grafové metódy boli použité napr. pri návrhoch blokových experimentov s mnohými ošetreniami (viď napr. \cite{cheng, bailey}) 
+alebo tzv. aproximatívnych návrhoch pre modely so špeciálnou množinou kontrastov medzi viacerými ošetreniami (viď \cite{rosa}). 
+Do budúcnosti by bolo možné preskúmať súvislosti grafovej reprezentácie binárnych riadkovo-stĺpcových návrhov s týmito grafovými prístupmi k navrhovaniu experimentov.
 
 Jedná sa o problematiku, ktorej nebolo venované toľko článkov a publikácií, ako iným, populárnejším témam. 
 Nech aj to je pre nás motiváciou k ďalšiemu bádaniu.
