--- a/13 Literatura.tex
+++ b/13 Literatura.tex
@@ -10,4 +10,11 @@
 
 	\bibitem{kniha} \url{http://oeis.org/A002724}
 
+	\bibitem{cheng} Cheng, C.S.: {\it Maximizing the total number of spanning trees in a graph: two related problems in graph theory and optimum design theory},
+	Department of Statistics, University of California, Berkeley, California 94720, USA
+
+	\bibitem{bailey} Bailey, R.A., Cameron, P.J.: {\it Combinatorics of optimal designs. Surveys in Combinatorics}, London Mathematical Society Lecture Note Series 365, 2009
+
+	\bibitem{rosa} Rosa, S.: {\it Optimal designs for treatment comparisons represented by graphs}, dostupné na internete: \url{https://link.springer.com/article/10.1007%2Fs10182-017-0312-5}
+
 \end{thebibliography}
